--- a/views/tease-project.twig
+++ b/views/tease-project.twig
@@ -9,35 +9,37 @@
             </a>
         </figure>
         {% endif %}
-        <header class="post-header">
-            <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
-            <ul class="post-box-meta">
-                {% if post.has_field('_project_date') %}
-                <li class="full-width post-box-date">
-                    <i class="fa fa-calendar"></i> {{post.get_field('_project_date')}}
-                </li>
-                {% endif %}
-                {% if post.has_field('_project_client') %}
-                <li class="full-width post-box-client">
-                    <i class="fa fa-user"></i> <a target="_blank" href="{{post.get_field('_project_url')}}">{{post.get_field('_project_client')}}</a>
-                </li>
-                {% endif %}
-                <li class="post-box-category">
-                    <i class="fa fa-folder"></i>
-                    {% for portfolio in post.terms('portfolio') %}
-                        <a href="{{portfolio.link}}">{{portfolio.name}}</a>
-                        {% if loop.last == false %}, {% endif %}
-                    {% endfor %}
-                </li>
-                <li class="post-box-category">
-                    <i class="fa fa-folder"></i>
-                    {% for technology in post.terms('technology') %}
-                        <a href="{{technology.link}}">{{technology.name}}</a>
-                        {% if loop.last == false %}, {% endif %}
-                    {% endfor %}
-                </li>
-            </ul>
-        </header>
-        <a href="{{post.link}}" class="read-more">Read More</a>
+        <div class="post-box-content">
+            <header class="post-header">
+                <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
+                <ul class="post-box-meta">
+                    {% if post.has_field('_project_date') %}
+                    <li class="full-width post-box-date">
+                        <i class="fa fa-calendar"></i> {{post.get_field('_project_date')}}
+                    </li>
+                    {% endif %}
+                    {% if post.has_field('_project_client') %}
+                    <li class="full-width post-box-client">
+                        <i class="fa fa-user"></i> <a target="_blank" href="{{post.get_field('_project_url')}}">{{post.get_field('_project_client')}}</a>
+                    </li>
+                    {% endif %}
+                    <li class="post-box-category">
+                        <i class="fa fa-folder"></i>
+                        {% for portfolio in post.terms('portfolio') %}
+                            <a href="{{portfolio.link}}">{{portfolio.name}}</a>
+                            {% if loop.last == false %}, {% endif %}
+                        {% endfor %}
+                    </li>
+                    <li class="post-box-category">
+                        <i class="fa fa-folder"></i>
+                        {% for technology in post.terms('technology') %}
+                            <a href="{{technology.link}}">{{technology.name}}</a>
+                            {% if loop.last == false %}, {% endif %}
+                        {% endfor %}
+                    </li>
+                </ul>
+            </header>
+            <a href="{{post.link}}" class="read-more">Read More</a>
+        </div>
     </article>
 {% endblock %}
