--- a/assets/scss/partials/_header.scss
+++ b/assets/scss/partials/_header.scss
@@ -14,6 +14,11 @@
     border-left: 0;
     border-top: 0;
     padding: 15px 30px;
+
+    @include elr-breakpoint($config: (point: jupiter)) {
+        padding-left: 20px;
+        padding-right: 20px;
+    }
 }
 
 .main-nav {
@@ -50,16 +55,29 @@
         &.current-menu-item a {
             border-bottom-color: $link-color;
         }
+
+        &:first-child {
+            padding-left: 10px;
+
+            @include elr-breakpoint($config: (point: 'jupiter')) {
+                padding-left: 5px;
+            }
+        }
     }
 
     a {
         display: inline-block;
         height: 100%;
-        padding: 15px 30px 12px;
+        padding: 15px 20px 12px;
         text-decoration: none;
         color: $link-color;
         transition: color .3s, border-color .3s;
         border-bottom: 3px solid transparent;
+
+        @include elr-breakpoint($config: (point: 'jupiter')) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
 
         &:hover {
             text-decoration: none;
@@ -83,5 +101,10 @@
     li a {
         padding-left: 20px;
         padding-right: 20px;
+
+        @include elr-breakpoint($config: (point: 'jupiter')) {
+            padding-left: 10px;
+            padding-right: 10px;
+        }
     }
 }
