--- a/views/tease-tutorial.twig
+++ b/views/tease-tutorial.twig
@@ -9,22 +9,24 @@
             </a>
         </figure>
         {% endif %}
-        <header class="post-header">
-            <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
-            <ul class="post-box-meta">
-                <li class="post-box-author">
-                    <i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a>
-                </li>
-                <li class="post-box-date">
-                    <i class="fa fa-calendar"></i> {{post.date}}
-                </li>
-                <li class="post-box-category">
-                    <i class="fa fa-folder"></i> <a href="{{post.category.link}}">{{post.category}}</a>
-                </li>
-            </ul>
-        </header>
-        <div class="post-content">
-            <p class="post-excerpt">{{post.get_preview(25)}}</p>
+        <div class="post-box-content">
+            <header class="post-header">
+                <h3 class="post-box-title"><a href="{{post.link}}">{{post.title}}</a></h3>
+                <ul class="post-box-meta">
+                    <li class="post-box-author">
+                        <i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a>
+                    </li>
+                    <li class="post-box-date">
+                        <i class="fa fa-calendar"></i> {{post.date}}
+                    </li>
+                    <li class="post-box-category">
+                        <i class="fa fa-folder"></i> <a href="{{post.category.link}}">{{post.category}}</a>
+                    </li>
+                </ul>
+            </header>
+            <div class="post-content">
+                <p class="post-excerpt">{{post.get_preview(25)}}</p>
+            </div>
         </div>
     </article>
 {% endblock %}
