organize views; create resume view

--- a/assets/scss/custom.scss
+++ b/assets/scss/custom.scss
@@ -4,3 +4,7 @@
 @import 'partials/general';
 @import 'partials/main-content';
 @import 'partials/header';
+@import 'partials/footer';
+@import 'partials/personal-info';
+@import 'partials/background';
+@import 'partials/post-box';
