--- a/views/teases/tease-post.twig
+++ b/views/teases/tease-post.twig
@@ -1,7 +1,7 @@
-{% extends "tease.twig" %}
+{% extends "teases/tease.twig" %}
 
 {% block content %}
-    <article class="post-box tutorial">
+    <article class="post-box post">
         {% if post.thumbnail.src %}
         <figure class="post-box-image">
             <a href="{{post.link}}">
