--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -9,11 +9,17 @@ body {
 
 a {
     text-decoration: none;
+
+    &:hover {
+        text-decoration: none;
+    }
+}
+
+a:not(.elr-button):not(.skill-link) {
     color: $link-color;
     transition: color .3s;
 
     &:hover {
-        text-decoration: none;
         color: $accent-color;
     }
 }
@@ -39,7 +45,7 @@ img {
 }
 
 .main-content {
-    padding: 40px;
+    padding: 30px;
 
     @include elr-breakpoint($config: (point: 'jupiter')) {
         padding: 20px;
@@ -50,73 +56,26 @@ img {
     display: flex;
     align-items: flex-start;
     justify-content: center;
-
-    @include elr-breakpoint($config: (point: 960px)) {
-        flex-wrap: wrap;
-    }
+    width: 100%;
+    flex-wrap: wrap;
+    flex: 1;
 }
 
 .content-holder {
-    margin-left: 20px;
+    flex-basis: 70%;
+    flex-grow: 2;
+}
 
-    @include elr-breakpoint($config: (point: 960px)) {
-        width: 100%;
-        margin-left: 0;
+.sidebar {
+    flex-basis: 20%;
+    flex-grow: 1;
+    max-width: 400px;
+    margin-right: 20px;
+
+    @include elr-breakpoint($config: (point: 568px)) {
+        max-width: 100%;
+        margin-right: 0;
     }
-}
-
-.personal-info-box {
-    width: 25%;
-    text-align: center;
-    padding: 30px 20px;
-
-    @include elr-breakpoint($config: (point: 960px)) {
-        width: auto;
-    }
-
-    @include elr-breakpoint($config: (point: 600px)) {
-        width: 100%;
-    }
-}
-
-.personal-info-avatar {
-    width: 100px;
-    height: 100px;
-    border-radius: 50px;
-    margin: 0 auto;
-    overflow: hidden;
-    box-shadow: 1px 1px 1px rgba($black, .3);
-
-    img {
-        height: 100px;
-        width: auto;
-    }
-}
-
-.personal-info {
-    padding-top: 20px;
-    padding-bottom: 20px;
-}
-
-.personal-info-name,
-.personal-info-role,
-.personal-info-location {
-    margin: 0;
-    padding: 0;
-}
-
-.personal-info-name {
-    font-size: to-rems(20px);
-    padding: 10px 0;
-    font-weight: 700;
-}
-
-.personal-info-role,
-.personal-info-location {
-    font-family: 'roboto';
-    font-size: to-rems(16px);
-    color: $darker-grey;
-    font-weight: 300;
 }
 
 .box-heading {
@@ -131,172 +90,48 @@ img {
     }
 }
 
-.background,
-.posts {
-    width: 100%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.posts {
-    .post-box {
-        width: (100% / 3);
-        padding: 20px 15px;
-
-        @include elr-breakpoint($config: (point: 960px)) {
-            width: 100%;
-            display: flex;
-            padding-top: 10px;
-            padding-bottom: 10px;
-        }
-
-        @include elr-breakpoint($config: (point: 600px)) {
-            flex-wrap: wrap;
-            // justify-content: center;
-        }
-
-        &:first-of-type {
-            padding-left: 30px;
-
-            @include elr-breakpoint($config: (point: 960px)) {
-                padding-left: 15px;
-            }
-        }
-
-        &:last-of-type {
-            padding-right: 30px;
-
-            @include elr-breakpoint($config: (point: 960px)) {
-                padding-right: 15px;
-            }
-        }
-    }
-
-    .post-box-title {
-        font-size: to-rems(18px);
-
-        @include elr-breakpoint($config: (point: 600px)) {
-            padding-top: 0;
-        }
-    }
-
-    .post-box-image {
-        height: 150px;
-        overflow: hidden;
-        // box-shadow: 1px 1px 1px rgba($black, .3);
-        position: relative;
-        margin-bottom: 10px;
-
-        @include elr-breakpoint($config: (point: 960px)) {
-            height: auto;
-            position: static;
-            margin-right: 20px;
-            width: (100% / 3);
-        }
-
-        @include elr-breakpoint($config: (point: 600px)) {
-            width: auto;
-            margin-right: 0;
-        }
-
-        img {
-            position: absolute;
-            top: 50%;
-            left: 50%;
-            min-height: 150px;
-            width: auto;
-            transform: translate(-50%, -50%);
-            display: block;
-
-            @include elr-breakpoint($config: (point: 960px)) {
-                position: static;
-                left: 0;
-                top: 0;
-                transform: none;
-                min-height: 0;
-            }
-        }
-    }
-
-    .post-box-content {
-        @include elr-breakpoint($config: (point: 960px)) {
-            width: (100% / 3) * 2;
-        }
-
-        @include elr-breakpoint($config: (point: 600px)) {
-            width: 100%;
-            padding-top: 10px;
-        }
-    }
-
-    .post-box-meta {
-        padding: 0;
-        margin: 0;
-        width: 100%;
-        display: flex;
-        flex-wrap: wrap;
-
-        li {
-            list-style: none;
-            font-size: to-rems(12px);
-            padding: 0 10px 0 0;
-        }
-
-        a {
-            color: $dark-grey;
-        }
-
-        .full-width {
-            width: 100%;
-        }
-
-        .fa {
-            font-size: 12px;
-            color: $elr-blue;
-        }
-
-        .post-box-category {
-            width: 100%;
-            padding-right: 0;
-        }
-    }
-
-    .post-excerpt {
-        font-family: 'roboto';
-        font-size: to-rems(14px);
-        color: $darker-grey;
-        font-weight: 300;
-        padding: 10px 0;
-    }
-
-    .read-more {
-        font-family: 'roboto';
-        font-size: to-rems(14px);
-        font-weight: 300;
-        margin-top: 10px;
-        display: block;
-    }
-}
-
-.background-section {
+.page-block-footer {
+    font-size: to-rems(22px);
+    border-bottom: $border;
     width: 100%;
     padding: 20px 30px;
-    color: $darker-grey;
+    font-weight: 700;
 
     @include elr-breakpoint($config: (point: 960px)) {
         padding: 15px;
     }
 }
 
-.background-section-title {
-    font-size: to-rems(18px);
-    font-weight: 700;
-    border-bottom: $border;
-    margin-bottom: 20px;
+.post-holder {
+    display: flex;
+    padding: 0 15px;
+    justify-content: stretch;
+    flex-wrap: wrap;
 
     @include elr-breakpoint($config: (point: 960px)) {
-        margin-bottom: 10px;
+        flex-wrap: wrap;
     }
+
+    .post-box {
+        flex-grow: 1;
+        flex-shrink: 1;
+
+        @include elr-breakpoint($config: (point: 960px)) {
+            width: 100%;
+        }
+    }
+}
+
+.read-more {
+    font-family: 'roboto';
+    font-size: to-rems(14px);
+    font-weight: 300;
+    margin-top: 10px;
+    display: block;
+}
+
+.skills-holder {
+    @include elr-clearfix;
 }
 
 .skill-link {
@@ -314,25 +149,6 @@ img {
     }
 }
 
-.post-full {
-    .post-box-title {
-        font-size: to-rems(22px);
-    }
-
-    .post-box-meta {
-        list-style: none;
-        padding: 0;
-        margin: 0 0 10px;
-
-        .fa {
-            display: inline-block;
-            width: 20px;
-            text-align: center;
-            color: $link-color;
-        }
-    }
-}
-
 .recommendation-body {
     padding: 0;
     margin: 0;
@@ -344,6 +160,15 @@ img {
     line-height: 1.2;
 }
 
-.main-footer {
-    padding: 20px 10px;
+.page-title {
+    font-size: to-rems(36px);
+    color: $accent-color;
+    font-weight: 700;
+    padding-bottom: 5px;
+    border-bottom: 1px solid $light-grey;
+    margin-bottom: 30px;
+}
+
+.content {
+    padding: 20px 30px;
 }
