--- a/views/teases/tease-project.twig
+++ b/views/teases/tease-project.twig
@@ -1,4 +1,4 @@
-{% extends "tease.twig" %}
+{% extends "teases/tease.twig" %}
 
 {% block content %}
     <article class="post-box project">
@@ -23,6 +23,13 @@
                         <i class="fa fa-user"></i> <a target="_blank" href="{{post.get_field('_project_url')}}">{{post.get_field('_project_client')}}</a>
                     </li>
                     {% endif %}
+                    <li class="post-box-category">
+                        <i class="fa fa-folder"></i>
+                        {% for type in post.terms('project_type') %}
+                            <a href="{{type.link}}">{{type.name}}</a>
+                            {% if loop.last == false %}, {% endif %}
+                        {% endfor %}
+                    </li>
                     <li class="post-box-category">
                         <i class="fa fa-folder"></i>
                         {% for portfolio in post.terms('portfolio') %}
