--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -172,3 +172,17 @@ img {
 .content {
     padding: 20px 30px;
 }
+
+.post-type-post {
+    max-width: 800px;
+    margin: auto;
+
+    .post-image-holder {
+        margin-bottom: 20px;
+    }
+
+    .post-title {
+        font-size: to-rems(30px);
+        margin-bottom: 10px;
+    }
+}
