--- a/views/index.twig
+++ b/views/index.twig
@@ -1,11 +1,13 @@
-{% extends "layouts/base.twig" %}
+{% extends "page.twig" %}
 
 {% block content %}
 <article>
     <h1 class="page-title">{{posts[0].type.label}}</h1>
-    <div class="shadow-box post-holder">
+    <div class="post-loop">
         {% for post in posts %}
+        <div class="shadow-box post-box">
             {% include ['tease-'~post.post_type~'.twig', 'teases/tease.twig'] %}
+        </div>
         {% endfor %}
     </div>
     {% include 'partials/pagination.twig' with {'posts': posts} %}
