--- a/views/single.twig
+++ b/views/single.twig
@@ -2,20 +2,18 @@
 
 {% block content %}
     <section>
-        <div class="post-section elr-container">
-            <div class="content-holder elr-row">
-                <article role="article" class="elr-col-full post post-type-{{post.post_type}}" id="post-{{post.ID}}">
-                    <div class="post-content">
-                        <h1 class="post-title">{{post.title}}</h1>
-                        {% if post.thumbnail.src %}
-                        <figure class="post-image-holder">
-                            <img src="{{post.thumbnail.src}}" />
-                        </figure>
-                        {% endif %}
-                        {{post.content}}
-                    </div>
-                </article>
-            </div>
+        <div class="post-section">
+            <article role="article" class="post post-type-{{post.post_type}}" id="post-{{post.ID}}">
+                <div class="post-content">
+                    {% if post.thumbnail.src %}
+                    <figure class="post-image-holder">
+                        <img src="{{post.thumbnail.src}}" />
+                    </figure>
+                    {% endif %}
+                    <h1 class="post-title">{{post.title}}</h1>
+                    {{post.content}}
+                </div>
+            </article>
         </div>
     </section>
 {% endblock %}
