style single tutorial template

--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -173,7 +173,8 @@ img {
     padding: 20px 30px;
 }
 
-.post-type-post {
+.post-type-post,
+.post-type-tutorial {
     max-width: 800px;
     margin: auto;
 
