single project template layout

--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -174,7 +174,8 @@ img {
 }
 
 .post-type-post,
-.post-type-tutorial {
+.post-type-tutorial,
+.post-type-project {
     max-width: 800px;
     margin: auto;
 
