--- a/views/index.twig
+++ b/views/index.twig
@@ -6,7 +6,7 @@
     <div class="post-loop">
         {% for post in posts %}
         <div class="shadow-box post-box">
-            {% include ['tease-'~post.post_type~'.twig', 'teases/tease.twig'] %}
+            {% include ['teases/tease-'~post.post_type~'.twig', 'teases/tease.twig'] %}
         </div>
         {% endfor %}
     </div>
