--- a/views/single-tutorial.twig
+++ b/views/single-tutorial.twig
@@ -11,7 +11,7 @@
                     </figure>
                     {% endif %}
                     <h1 class="post-title">{{post.title}}</h1>
-                    <ul class="post-box-meta">
+                    <ul class="post-meta">
                         <li class="post-box-author">
                             <i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a>
                         </li>
