--- a/assets/scss/partials/_main-content.scss
+++ b/assets/scss/partials/_main-content.scss
@@ -187,4 +187,17 @@ img {
         font-size: to-rems(30px);
         margin-bottom: 10px;
     }
+
+    .post-meta {
+        margin: 10px 5px 20px;
+        padding-left: 0;
+        list-style-type: none;
+        font-size: to-rems(14px);
+    }
+
+    .post-meta-icon {
+        width: 20px;
+        padding-right: 5px;
+        color: $link-color;
+    }
 }
