--- a/views/single.twig
+++ b/views/single.twig
@@ -11,6 +11,17 @@
                     </figure>
                     {% endif %}
                     <h1 class="post-title">{{post.title}}</h1>
+                    <ul class="post-meta">
+                        <li class="post-box-author">
+                            <i class="fa fa-user"></i> <a href="{{post.author.link}}">{{post.author}}</a>
+                        </li>
+                        <li class="post-box-date">
+                            <i class="fa fa-calendar"></i> {{post.date}}
+                        </li>
+                        <li class="post-box-category">
+                            <i class="fa fa-folder"></i> <a href="{{post.category.link}}">{{post.category}}</a>
+                        </li>
+                    </ul>
                     {{post.content}}
                 </div>
             </article>
