--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 /*-----------------------------------------------------------------------------
-    Theme Name:  ELR Portfolio
+    Theme Name:  ELR-Portfolio
     Theme URI:   github.com/Beth3346/elr-portfolio.git
-    Version:     0.1.0
+    Version:     1.5.0
     Author:      Elizabeth Rogers
     Email:       beth@elizabeth-rogers.com
     Website:     elizabeth-rogers.com
