update autoloader; add 404 template

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 /*-----------------------------------------------------------------------------
-    Theme Name:  ELR-Portfolio
+    Theme Name:  ELR Portfolio
     Theme URI:   github.com/Beth3346/elr-portfolio.git
     Version:     1.5.0
     Author:      Elizabeth Rogers
