--- a/views/404.twig
+++ b/views/404.twig
@@ -1,6 +1,6 @@
-{% extends "page.twig" %}
+{% extends "layouts/base.twig" %}
 
-{% block page %}
+{% block content %}
     <h2>Oh No! 404</h2>
     <p>Sorry, we couldn't find what you're looking for.</p>
     <p>Go back <a href="{{site.url}}">home</a></p>
