--- a/views/page.twig
+++ b/views/page.twig
@@ -2,7 +2,7 @@
 
 {% block content %}
 <article class="page-content">
-    {% include 'partials/sidebar.twig' %}
+    {{sidebar}}
     <div class="content-holder">
         {% block page %}
             <section role="article" class="post post-type-{{post.post_type}}" id="post-{{post.ID}}">
