--- a/views/sidebar.twig
+++ b/views/sidebar.twig
@@ -6,10 +6,11 @@
         </figure>
         {% endif %}
         <div class="personal-info">
-            <h3 class="personal-info-name">Elizabeth Rogers</h3>
+            <h3 class="personal-info-name">{{general.name}}</h3>
             <h4 class="personal-info-role">Web Developer</h4>
             <h4 class="personal-info-location">San Antonio, Texas</h4>
         </div>
         <a href="/contact" class="elr-button elr-button-primary">Contact</a>
     </div>
+    {# add widgets #}
 </aside>
