fix locations field; use general options fields in sidebar

--- a/views/sidebar.twig
+++ b/views/sidebar.twig
@@ -7,8 +7,8 @@
         {% endif %}
         <div class="personal-info">
             <h3 class="personal-info-name">{{general.name}}</h3>
-            <h4 class="personal-info-role">Web Developer</h4>
-            <h4 class="personal-info-location">San Antonio, Texas</h4>
+            <h4 class="personal-info-role">{{general.role}}</h4>
+            <h4 class="personal-info-location">{{general.location}}</h4>
         </div>
         <a href="/contact" class="elr-button elr-button-primary">Contact</a>
     </div>
